# nyxproxy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  render.yaml
.github/workflows/: desktop.yml
action/: action.yml
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/nyxproxy_backend/: __init__.py  config.py  main.py  prompts.py  schemas.py
apps/backend/nyxproxy_backend/providers/: __init__.py  base.py  bytez.py  cloudflare.py  failover.py  gemini.py  github_models.py  groq.py  huggingface.py  nvidia.py  ollama.py  openrouter.py
apps/backend/nyxproxy_backend/routes/: ai_attack.py  analyze.py  chat.py  collab.py  collaborator.py  findings.py  health.py  providers.py  scan_jobs.py  sync.py
apps/backend/tests/: conftest.py  test_ai_attack.py  test_analyze.py  test_collab.py  test_collaborator.py  test_findings.py  test_health.py  test_providers.py  test_scan_jobs.py  test_sync.py
apps/desktop/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/crates/nyxproxy-core/: Cargo.toml
apps/desktop/crates/nyxproxy-core/src/: bridge.rs  burp_import.rs  ca.rs  compliance.rs  decoder.rs  error.rs  graphql.rs  history.rs  http3.rs  intercept.rs  intruder.rs  jwt.rs  lib.rs  macros.rs  model.rs  monitor.rs  nyxshare.rs  openapi.rs  owasp.rs  owasp_dashboard.rs  pcap.rs  playwright.rs  plugins.rs  proxy.rs  repeater.rs  report.rs  risk.rs  scanner.rs  selfhost.rs  sequencer.rs  spider.rs  websocket.rs  workspace.rs
apps/desktop/crates/nyxproxy-core/tests/: proxy_integration.rs
apps/desktop/crates/nyxproxy-scan/: Cargo.toml
apps/desktop/crates/nyxproxy-scan/src/: main.rs
apps/desktop/crates/nyxproxy-worker/: Cargo.toml
apps/desktop/crates/nyxproxy-worker/src/: main.rs
apps/desktop/plugins/: README.md
apps/desktop/plugins/example-wordpress/: main.py  plugin.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  settings.rs  state.rs
apps/desktop/src/components/: CommandPalette.tsx  RequestViewer.tsx  SplitPane.tsx  Toasts.tsx
apps/desktop/src/lib/: backend.ts  codec.ts  diff.ts  http.ts
apps/desktop/src/pages/: AiAssistant.tsx  AiAttack.tsx  Collab.tsx  Collaborator.tsx  Comparer.tsx  Compliance.tsx  Dashboard.tsx  Decoder.tsx  DistributedScan.tsx  Extender.tsx  GraphQL.tsx  Intruder.tsx  Logger.tsx  Macros.tsx  Monitor.tsx  OpenApiTests.tsx  OwaspDashboardPage.tsx  ProjectOptions.tsx  Proxy.tsx  Repeater.tsx  Sequencer.tsx  Target.tsx  UserOptions.tsx  WebSockets.tsx
apps/desktop/src/state/: store.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/tauri/: api.ts  types.ts
docs/: NEXT-SESSION-PROMPT.md
docs/architecture/: overview.md
docs/ci/: backend.workflow.yml  desktop.workflow.yml
docs/comparison/: burp-vs-nyxproxy.md  leapfrog-features.md
docs/features/: README.md  ai-attack.md  browser-extension.md  burp-import.md  ci-action.md  cloud-sync.md  collaboration.md  compliance.md  cve-mapping.md  distributed-scan.md  embedded-browser.md  graphql.md  hotkeys.md  http2-http3.md  http2.md  jwt-toolkit.md  monitor.md  nyxshare.md  owasp-dashboard.md  pcap-export.md  recorded-macros.md  risk-scoring.md  self-host.md  websockets.md  workspaces.md
extensions/browser/: README.md  background.js  manifest.json  options.html  options.js
