[workspace]
resolver = "2"
members = ["src-tauri", "crates/nyxproxy-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NyxProxy Contributors"]
repository = "https://github.com/gitboyabhayt/nyxproxy"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap = "6.1"
flate2 = "1.0"
futures-util = "0.3"
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
once_cell = "1.20"
parking_lot = "0.12"
rand = "0.8"
rcgen = { version = "0.13", features = ["pem"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
webpki-roots = "0.26"
zstd = "0.13"
time = "0.3"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
