[package]
name = "nyxproxy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "NyxProxy desktop app — Tauri shell wrapping the nyxproxy-core engine."

[lib]
name = "nyxproxy_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nyxproxy"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
nyxproxy-core = { path = "../crates/nyxproxy-core" }

tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

rustls = { workspace = true }
anyhow.workspace = true
base64.workspace = true
dirs = "5.0"
futures-util.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
