[package]
name = "nyxproxy-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Headless NyxProxy scanner — spider + passive scanner + SARIF/JSON/HTML output. Used by nyxproxy-action (GitHub Action) for DAST in CI."

[[bin]]
name = "nyxproxy-scan"
path = "src/main.rs"

[dependencies]
nyxproxy-core = { path = "../nyxproxy-core" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
